[package]
name = "suivault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpassword = "7.2.0"
eth-keystore = "0.5.0"
rand = "0.8.5"
signature = "1.6.1"
sui-sdk = { git = "https://github.com/MystenLabs/sui" }
sui-keys = { git = "https://github.com/MystenLabs/sui" }
sui-types = { git = "https://github.com/MystenLabs/sui" }
clap = { version = "4.0.29", features = ["derive"] }
jsonrpsee = "0.16.2"
anyhow = "1.0.66"
bip32 = "0.4.0"
thiserror = "1.0.37"
fastcrypto = "0.1.4"
home = "0.5.4"
colored = "2.0.0"
tokio = "1.17.0"
axum = "0.6.1"
tracing-subscriber = "0.3.11"
tracing = "0.1.37"
serde = "1.0.149"
serde_json = "1.0.89"
